--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 
     <div class="div-container-fluid">
         <button id="getWeather" onclick="getWeather()">Get Weather</button>
+        <p id="result"></p>
     </div>
 
     <footer>
@@ -60,3 +61,24 @@
 </body>
 
 </html>
+<script>
+    const API_KEY = '9ccabe21e06695561b5fe43b81c805b3'; // Replace with your real key
+    const city = 'London';
+    document.getElementById('getWeather').addEventListener('click', () => {
+      const url = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${API_KEY}&units=metric`;
+
+      fetch(url)
+        .then(response => response.json())
+        .then(data => {
+          console.log(data); // This line shows the entire response from the API
+          const temp = data.main.temp;
+          const description = data.weather[0].description;
+          document.getElementById('result').textContent =
+            `Temperature: ${temp}°C, Weather: ${description}`;
+        })
+        .catch(error => {
+          console.error('Error:', error);
+          document.getElementById('result').textContent = 'Failed to load weather data.';
+        });
+    });
+</script>
