add an input field to search for a city

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
     </div>
 
     <div class="div-container-fluid">
+        <input type="text" id="cityInput" placeholder="Enter city name" />
         <button id="getWeather" onclick="getWeather()">Get Weather</button>
         <p id="result"></p>
     </div>
