added forecast page with documentation about the project

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="collapse navbar-collapse text-black" id="navbarNavAltMarkup">
                 <div class="navbar-nav text-black">
                     <a class="nav-link active text-black" aria-current="page" href="index.html">Main</a>
-                    <a class="nav-link text-black" href="cooking.html">Forecast</a>
+                    <a class="nav-link text-black" href="forecast.html">Forecast</a>
                     <a class="nav-link text-black" href="baking.html">Tips</a>
                     <a class="nav-link text-black" href="impressum.html">About</a>
                 </div>
