--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="navbar-nav text-black">
                     <a class="nav-link active text-black" aria-current="page" href="index.html">Main</a>
                     <a class="nav-link text-black" href="forecast.html">Forecast</a>
-                    <a class="nav-link text-black" href="baking.html">Tips</a>
-                    <a class="nav-link text-black" href="impressum.html">About</a>
+                    <a class="nav-link text-black" href="tips.html">Tips</a>
+                    <a class="nav-link text-black" href="documentation.html">About</a>
                 </div>
             </div>
         </div>
