--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body id="main">
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg bg-transparant">
+    <nav class="navbar navbar-expand-lg bg-transparent">
         <div class="container-fluid">
             <a class="navbar-brand text-black" href="index.html">Weather</a>
             <button class="navbar-toggler text-black" type="button" data-bs-toggle="collapse"
