--- a/documentation.html
+++ b/documentation.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg bg-transparant">
+  <nav class="navbar navbar-expand-lg bg-transparent">
     <div class="container-fluid">
       <a class="navbar-brand text-black" href="index.html">Weather</a>
       <div class="navbar-nav">
@@ -44,5 +44,11 @@
   <footer class="text-center mt-5">
     <p>&copy; 2025 My Website. All rights reserved.</p>
   </footer>
+
+  <!-- Bootstrap JS Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+ <!-- Your Custom JS -->
+ <script src="js/javascript.js"></script>
 </body>
 </html>
