display Temperature, Windspeed, and Weather DATA in their respective sections on the index page

--- a/index.html
+++ b/index.html
@@ -37,14 +37,18 @@
         <div class="row">
             <div class="col">
                 <h3>Temperature</h3>
+                <p id="temperature">Loading...</p>
                 <p>To know what to wear outside</p>
             </div>
             <div class="col">
                 <h3>Windspeed</h3>
+                <p id="windspeed">Loading...</p>
                 <p>For special activities</p>
             </div>
             <div class="col">
-                <h3>Rain</h3>
+                <!--  rain data is not available -->
+                <h3>Weather</h3>
+                <p id="rain">Loading...</p>
                 <p>So it doesn't crash plans</p>
             </div>
         </div>
