fix displaying Weather description bug

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <div class="col">
                 <!--  rain data is not available -->
                 <h3>Weather</h3>
-                <p id="rain">Loading...</p>
+                <p id="weather">Loading...</p>
                 <p>So it doesn't crash plans</p>
             </div>
         </div>
