get forecast by day function and some clean up

--- a/forecast.html
+++ b/forecast.html
@@ -21,10 +21,17 @@
   </nav>
 
   <div class="container text-center mt-4">
-    <h2>5-Day Weather Forecast</h2>
+    <h2>Weather Forecast every 3 hours</h2>
     <input type="text" id="cityInput" class="form-control w-50 mx-auto my-3" placeholder="Enter city name">
-    <button onclick="getForecast()" class="btn btn-primary">Get Forecast</button>
+    <button onclick="getForecast()" class="btn btn-primary">Get Forecast by Hour</button>
     <div id="forecastResult" class="mt-3"></div>
+  </div>
+
+  <div class="container text-center mt-4">
+    <h2>5-Day Weather Forecast</h2>
+    <input type="text" id="cityInputByDay" class="form-control w-50 mx-auto my-3" placeholder="Enter city name">
+    <button onclick="getForecastByDay()" class="btn btn-primary">Get 5 day Forecast </button>
+    <div id="forecast5day" class="mt-3"></div>
   </div>
 
   <footer class="text-center mt-5">
